Lägg till GitHub-länk

--- a/themes/hetu22/incl/footer.twig
+++ b/themes/hetu22/incl/footer.twig
@@ -1,7 +1,9 @@
 <div class="footer">
     <div>
         <p>
-            En footer med lite text.
+            Sidan är byggd med
+            <a href="https://picocms.org/">Pico</a> och
+            <a href="https://twig.symfony.com/doc/1.x/">Twig</a>.
         </p>
     </div>
     <div class="social">
