--- a/themes/hetu22/css/style.css
+++ b/themes/hetu22/css/style.css
@@ -1,10 +1,3 @@
-* {
-    box-sizing: border-box;
-    border: 0 none;
-    margin: 0;
-    padding: 0;
-}
-
 ol, ul {
     padding-left: 1.5em;
 }
@@ -15,6 +8,9 @@ ol, ul {
 
 html, body {
     height: 100%;
+    box-sizing: border-box;
+    margin: 0 2rem;
+    padding: 0;
 }
 
 /* Placement */
@@ -26,6 +22,7 @@ body {
 
 .main {
     flex: 1 0 auto;
+    max-width: 50rem;
 }
 
 .header, .footer {
@@ -37,6 +34,10 @@ body {
 .header, .site-header {
     display: flex;
     justify-content: space-between;
+}
+
+.header .title a {
+    text-decoration: none;
 }
 
 /* Title */
@@ -71,6 +72,10 @@ body {
     display: flex;
     justify-content: space-between;
     border-top: 1px solid #222;
+}
+
+.footer p:first-child {
+    margin-top: 0;
 }
 
 .footer a {
@@ -143,4 +148,12 @@ blockquote {
     margin-left: 1em;
     padding-left: 1em;
     border-left: 0.5em solid #f5f5f5;
+}
+
+.author-photo {
+    float: right;
+    width: 15rem;
+    height: auto;
+    aspect-ratio: 1;
+    margin: 2rem;
 }
