--- a/themes/hetu22/scss/style.scss
+++ b/themes/hetu22/scss/style.scss
@@ -5,6 +5,11 @@
 @import 'code';
 @import 'mobile-menu';
 
+@font-face {
+    font-family: "Raleway";
+    src: url("../fonts/raleway/Raleway-Bold.ttf");
+}
+
 ol, ul {
     padding-left: 1.5em;
 }
@@ -111,6 +116,7 @@ p, td, th, li, dd {
 h1, h2, h3, h4, h5, h6 {
     margin-bottom: 0.6em;
     font-weight: bold;
+    font-family: "Raleway", serif;
 }
 
 img {
