--- a/themes/hetu22/scss/style.scss
+++ b/themes/hetu22/scss/style.scss
@@ -12,13 +12,14 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'mobile-menu';
 
 @font-face {
-    font-family: "Raleway";
-    src: url("../fonts/raleway/Raleway-Bold.ttf");
+    font-family: 'Raleway';
+    src: url('../fonts/raleway/Raleway-Bold.ttf');
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital@0;1&display=swap');
 
-ol, ul {
+ol,
+ul {
     padding-left: 1.5em;
 }
 
@@ -26,7 +27,8 @@ ol, ul {
     display: none !important;
 }
 
-html, body {
+html,
+body {
     height: 100%;
     box-sizing: border-box;
     margin: 0 2rem;
@@ -45,13 +47,15 @@ body {
     max-width: 50rem;
 }
 
-.header, .footer {
+.header,
+.footer {
     flex: 0 0 auto;
 }
 
 /* Header */
 
-.header, .site-header {
+.header,
+.site-header {
     display: flex;
     justify-content: space-between;
 }
@@ -62,17 +66,21 @@ body {
 
 /* Title */
 
-.title, .logo {
+.title,
+.logo {
     padding: 3em 3em 3em 0;
 }
 
 @media (max-width: 767px) {
-    .title, .logo {
+    .title,
+    .logo {
         padding: 1em 1em 1em 0;
     }
+
     .title {
         min-width: 50%;
     }
+
     .logo {
         max-width: 30%;
     }
@@ -120,16 +128,25 @@ body {
     background-color: $background-color;
 }
 
-p, td, th, li, dd {
+p,
+td,
+th,
+li,
+dd {
     text-align: justify;
     overflow-wrap: break-word;
     word-wrap: break-word;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin-bottom: 0.6em;
     font-weight: bold;
-    font-family: "Raleway", serif;
+    font-family: 'Raleway', serif;
 }
 
 img {
