--- a/themes/hetu22/scss/variables.scss
+++ b/themes/hetu22/scss/variables.scss
@@ -3,3 +3,4 @@ $font-alternative-color: #fff;
 $accent-color: #ee6c4d;
 $background-color: #fff;
 $background-alternative-color: #e0fbfc;
+$small-device-width: 767px;
