--- a/themes/hetu22/scss/mobile-menu.scss
+++ b/themes/hetu22/scss/mobile-menu.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .slide {
     overflow-y: hidden !important;
     transition: height 0.5s ease-in !important;
@@ -23,7 +25,7 @@
     display: none;
 }
 
-@media (max-width: 767px) {
+@media (max-width: $small-device-width) {
     .header {
         flex-direction: column;
     }
