--- a/themes/hetu22/scss/style.scss
+++ b/themes/hetu22/scss/style.scss
@@ -72,7 +72,7 @@ body {
     padding: 3em 3em 3em 0;
 }
 
-@media (max-width: 767px) {
+@media (max-width: $small-device-width) {
     .title,
     .logo {
         padding: 1em 1em 1em 0;
