--- a/themes/hetu22/scss/technologies.scss
+++ b/themes/hetu22/scss/technologies.scss
@@ -12,21 +12,31 @@
   }
 
   .tech-box {
+    font-size: xx-large;
+    line-height: 1.5em;
+
     a:link, a:visited {
       padding: 0.5rem;
 
+      display: flex;
+      flex-direction: column;
+
       text-decoration: none;
       color: black;
-      display: block;
       border: 1px solid black;
       width: 100%;
       height: 100%;
       box-sizing: border-box;
 
       span {
-        display: block;
-        font-size: x-large;
         border-bottom: 1px solid black;
+        color: white;
+        text-shadow:
+                3px 3px 2px black,
+                -1px -1px 0 #000,
+                1px -1px 0 #000,
+                -1px 1px 0 #000,
+                1px 1px 0 #000;
       }
     }
   }
