Implementera mall för technology-sidor

--- a/themes/hetu22/scss/style.scss
+++ b/themes/hetu22/scss/style.scss
@@ -11,6 +11,7 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'code';
 @import 'mobile-menu';
 @import 'technologies';
+@import 'technology';
 
 @font-face {
     font-family: 'Raleway';
