--- a/themes/hetu22/scss/technologies.scss
+++ b/themes/hetu22/scss/technologies.scss
@@ -14,31 +14,27 @@
     .tech-box {
         font-size: xx-large;
         line-height: 1.5em;
+    }
 
-        a:link, a:visited {
-            padding: 0.5rem;
+    .tech-box a:link,
+    .tech-box a:visited {
+        padding: 0.5rem;
 
-            display: flex;
-            flex-direction: column;
+        display: flex;
+        flex-direction: column;
 
-            text-decoration: none;
-            color: black;
-            border: 1px solid black;
-            width: 100%;
-            height: 100%;
-            box-sizing: border-box;
+        text-decoration: none;
+        color: #000;
+        border: 1px solid #000;
+        width: 100%;
+        height: 100%;
+        box-sizing: border-box;
+    }
 
-            span {
-                border-bottom: 1px solid black;
-                color: white;
-                text-shadow:
-                        3px 3px 2px black,
-                        -1px -1px 0 #000,
-                        1px -1px 0 #000,
-                        -1px 1px 0 #000,
-                        1px 1px 0 #000;
-            }
-        }
+    .tech-box a span {
+        border-bottom: 1px solid #000;
+        color: #fff;
+        text-shadow: 3px 3px 2px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     }
 
     .tech-box-css {
@@ -78,7 +74,8 @@
     .technologies-page {
         grid-template-columns: 1fr;
 
-        .tech-box, h1 {
+        .tech-box,
+        h1 {
             grid-column: 1 !important;
         }
     }
