--- a/themes/hetu22/scss/technology.scss
+++ b/themes/hetu22/scss/technology.scss
@@ -6,7 +6,7 @@
     //background: red;
     //max-width: none;
 
-    main.content {
+    main {
         grid-row: 1;
         grid-column: 2;
     }
@@ -17,7 +17,8 @@
     grid-row: 1;
     grid-column: 1;
 
-    ul, li {
+    ul,
+    li {
         padding: 0;
         margin: 0;
     }
@@ -26,7 +27,8 @@
         list-style: none;
     }
 
-    a:link, a:visited {
+    a:link,
+    a:visited {
         color: #111;
     }
 }
