--- a/themes/hetu22/incl/header.twig
+++ b/themes/hetu22/incl/header.twig
@@ -15,5 +15,10 @@
     {% endif %}
 
     <link rel="icon" href="{{ theme_url }}/../shared/img/favicon.ico">
-    <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" />
+
+    {% if config.session.theme == "dark" %}
+        <link rel="stylesheet" href="{{ theme_url }}/css/style-dark.css" type="text/css" />
+    {% else %}
+        <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" />
+    {% endif %}
 </head>
