--- a/themes/hetu22/scss/variables.scss
+++ b/themes/hetu22/scss/variables.scss
@@ -1,6 +1,26 @@
-$font-color: #333;
-$font-alternative-color: #fff;
-$accent-color: #ee6c4d;
-$background-color: #fff;
-$background-alternative-color: #e0fbfc;
+$font-color: #333 !default;
+$font-alternative-color: #fff !default;
+$accent-color: #ee6c4d !default;
+$background-color: #fff !default;
+$background-alternative-color: #e0fbfc !default;
+$title-color: #fff !default;
+$footer-text-color: #222 !default;
+$nav-toggle-color: #333 !default;
+$tech-box-border-color: #000 !default;
+$tech-box-text-color: #fff !default;
+$tech-box-text-outline-color: #000 !default;
+$code-border-color: #ccc !default;
+$code-background-color: #f5f5f5 !default;
+
+$tech-color-css: #e29292 !default;
+$tech-color-html: #ff6400 !default;
+$tech-color-js: #dcff00 !default;
+$tech-color-php: #856539 !default;
+$tech-color-python: #49d636 !default;
+$tech-color-git: #5253fe !default;
+$tech-color-sqlite: #c2c2c2 !default;
+
+$link-color: scale-color($tech-color-git, $lightness: -25%) !default;
+$link-visited-color: scale-color($link-color, $saturation: -50%) !default;
+
 $small-device-width: 767px;
