--- a/themes/hetu22/scss/code.scss
+++ b/themes/hetu22/scss/code.scss
@@ -1,9 +1,11 @@
+@import 'variables.scss';
+
 code {
     margin: 0 0.1em;
     padding: 0.1em 0.2em;
-    border: 1px solid #ccc;
+    border: 1px solid $code-border-color;
     border-radius: 0.3em;
-    background: #f5f5f5;
+    background: $code-background-color;
     font-family: monospace;
     font-size: 0.85rem;
     line-height: 1.9824;
@@ -13,7 +15,7 @@ pre {
     padding: 0 1em;
     border: 1px solid #ccc;
     border-radius: 0.3em;
-    background: #f5f5f5;
+    background: $code-background-color;
 }
 
 pre code {
@@ -25,4 +27,3 @@ pre code {
     overflow-x: auto;
     line-height: 1.4;
 }
-
