--- a/themes/hetu22/scss/technologies.scss
+++ b/themes/hetu22/scss/technologies.scss
@@ -24,48 +24,48 @@
         flex-direction: column;
 
         text-decoration: none;
-        color: #000;
-        border: 1px solid #000;
+        color: $tech-box-border-color;
+        border: 1px solid $tech-box-border-color;
         width: 100%;
         height: 100%;
         box-sizing: border-box;
     }
 
     .tech-box a span {
-        border-bottom: 1px solid #000;
-        color: #fff;
-        text-shadow: 3px 3px 2px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+        border-bottom: 1px solid $tech-box-text-outline-color;
+        color: $tech-box-text-color;
+        text-shadow: 3px 3px 2px $tech-box-text-outline-color, -1px -1px 0 $tech-box-text-outline-color, 1px -1px 0 $tech-box-text-outline-color, -1px 1px 0 $tech-box-text-outline-color, 1px 1px 0 $tech-box-text-outline-color;
     }
 
     .tech-box-css {
-        background: #e29292;
+        background: $tech-color-css;
     }
 
     .tech-box-html {
-        background: #ff6400;
+        background: $tech-color-html;
         grid-column: span 2;
     }
 
     .tech-box-js {
-        background: #dcff00;
+        background: $tech-color-js;
         grid-column: span 2;
     }
 
     .tech-box-php {
-        background: #856539;
+        background: $tech-color-php;
     }
 
     .tech-box-python {
-        background: #49d636;
+        background: $tech-color-python;
         grid-column: span 3;
     }
 
     .tech-box-git {
-        background: #5253fe;
+        background: $tech-color-git;
     }
 
     .tech-box-sqlite {
-        background: #c2c2c2;
+        background: $tech-color-sqlite;
         grid-column: span 2;
     }
 }
