--- a/themes/hetu22/scss/variables.scss
+++ b/themes/hetu22/scss/variables.scss
@@ -1,3 +1,6 @@
+$base-color1: #FF7F00 !default;
+$base-color2: #0088B3 !default;
+
 $font-color: #333 !default;
 $font-alternative-color: #fff !default;
 $accent-color: #ee6c4d !default;
@@ -13,14 +16,14 @@ $code-border-color: #ccc !default;
 $code-background-color: #f5f5f5 !default;
 
 $tech-color-css: #e29292 !default;
-$tech-color-html: #ff6400 !default;
-$tech-color-js: #dcff00 !default;
+$tech-color-html: $base-color1 !default;
+$tech-color-js: scale-color($base-color2, $lightness: +10%) !default;
 $tech-color-php: #856539 !default;
 $tech-color-python: #49d636 !default;
-$tech-color-git: #5253fe !default;
+$tech-color-git: #8484ef !default;
 $tech-color-sqlite: #c2c2c2 !default;
 
-$link-color: scale-color($tech-color-git, $lightness: -25%) !default;
+$link-color: $base-color2;
 $link-visited-color: scale-color($link-color, $saturation: -50%) !default;
 
 $small-device-width: 767px;
