--- a/themes/hetu22/scss/variables.scss
+++ b/themes/hetu22/scss/variables.scss
@@ -15,13 +15,13 @@ $tech-box-text-outline-color: #000 !default;
 $code-border-color: #ccc !default;
 $code-background-color: #f5f5f5 !default;
 
-$tech-color-css: #e29292 !default;
-$tech-color-html: $base-color1 !default;
-$tech-color-js: scale-color($base-color2, $lightness: +10%) !default;
-$tech-color-php: #856539 !default;
-$tech-color-python: #49d636 !default;
-$tech-color-git: #8484ef !default;
-$tech-color-sqlite: #c2c2c2 !default;
+$tech-color-css: scale-color($base-color1, $lightness: +10%) !default;
+$tech-color-html: scale-color($base-color2, $lightness: +20%) !default;
+$tech-color-js: scale-color($base-color1, $lightness: +10%) !default;
+$tech-color-php: scale-color($base-color2, $lightness: +20%) !default;
+$tech-color-python: scale-color($base-color1, $lightness: +10%) !default;
+$tech-color-git: scale-color($base-color1, $lightness: +10%) !default;
+$tech-color-sqlite: scale-color($base-color2, $lightness: +20%) !default;
 
 $link-color: $base-color2;
 $link-visited-color: scale-color($link-color, $saturation: -50%) !default;
