--- a/themes/hetu22/scss/variables.scss
+++ b/themes/hetu22/scss/variables.scss
@@ -1,5 +1,5 @@
-$base-color1: #FF7F00 !default;
-$base-color2: #0088B3 !default;
+$base-color1: #ff7f00 !default;
+$base-color2: #0088b3 !default;
 
 $font-color: #333 !default;
 $font-alternative-color: #fff !default;
