--- a/themes/hetu22/scss/style.scss
+++ b/themes/hetu22/scss/style.scss
@@ -109,7 +109,7 @@ body {
 .footer {
     display: flex;
     justify-content: space-between;
-    border-top: 1px solid ;
+    border-top: 1px solid $footer-text-color;
     padding-top: 0.5rem;
 }
 
