Fixa färg på titel

--- a/themes/hetu22/scss/style-dark.scss
+++ b/themes/hetu22/scss/style-dark.scss
@@ -5,7 +5,7 @@ $font-alternative-color: #fff;
 $accent-color: #ee6c4d;
 $background-color: #111;
 $background-alternative-color: #e0fbfc;
-$title-color: $background-color;
+$title-color: $font-color;
 $footer-text-color: $font-color;
 $nav-toggle-color: $font-color;
 $tech-box-border-color: #ddd;
