--- a/themes/hetu22/scss/variables.scss
+++ b/themes/hetu22/scss/variables.scss
@@ -6,7 +6,7 @@ $font-alternative-color: #fff !default;
 $accent-color: #ee6c4d !default;
 $background-color: #fff !default;
 $background-alternative-color: #e0fbfc !default;
-$title-color: #fff !default;
+$title-color: $font-color !default;
 $footer-text-color: #222 !default;
 $nav-toggle-color: #333 !default;
 $tech-box-border-color: #000 !default;
