Gör tema valbart via query parameter

--- a/themes/hetu22/incl/header.twig
+++ b/themes/hetu22/incl/header.twig
@@ -16,7 +16,7 @@
 
     <link rel="icon" href="{{ theme_url }}/../shared/img/favicon.ico">
 
-    {% if config.session.theme == "dark" %}
+    {% if config.themeStyle == "dark" %}
         <link rel="stylesheet" href="{{ theme_url }}/css/style-dark.css" type="text/css" />
     {% else %}
         <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" />
